'time' changed to 'times'

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Islamic Time PWA",
-    "name": "Islamic Time PWA",
+    "short_name": "Islamic Times PWA",
+    "name": "Islamic Times PWA",
     "icons": [
         {
             "src": "/images/logo.png",
