logo background white

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "Islamic Times",
-    "name": "ইসলামিক মূল্যবোধে উজ্জীবিত",
+    "name": "Islamic Times",
     "icons": [
         {
             "src": "/images/logo.png",
