updated some configs

--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,19 @@
     "name": "Islamic Times",
     "icons": [
         {
+            "src": "/images/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
             "src": "/images/logo.png",
             "type": "image/png",
-            "sizes": "1024x1024",
-            "purpose": "any maskable"
+            "sizes": "1024x1024"
         }
     ],
     "start_url": ".",
