--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
     "name": "Islamic Times",
     "icons": [
         {
+            "src": "/images/android-chrome-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
             "src": "/images/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png",
