installation problem for any muskable solved

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
             "src": "/images/android-chrome-144x144.png",
             "sizes": "144x144",
             "type": "image/png",
-            "purpose": "maskable"
+            "purpose": "any maskable"
         },
         {
             "src": "/images/android-chrome-192x192.png",
